# Customer-Support-Optimization-AI

./: README.md  crew.py  main.py  pyproject.toml  requirements.txt
agents/: classifier_agent.py  kb_agent.py  qa_agent.py  solution_agent.py
config/: gemini_config.py
tasks/: classify_task.py  generate_task.py  qa_task.py  retreive_task.py
