[project]
name = "customer-support-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.5",
    "crewai-tools>=1.14.5",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "litellm>=1.85.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pinecone-client>=6.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "transformers>=5.9.0",
    "uvicorn>=0.47.0",
]
